@@ -1,5 +1,12 @@
 2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/data/category/DefaultIntervalCategoryDataset.java
+	(getSeries): Removed,
+	(getCategories): Likewise,
+	(getItemCount): Likewise.
+
+2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/title/LegendItemBlockContainer.java
 	(datasetIndex): Removed,
 	(series): Removed,
